--- a/styles/portfolio.css
+++ b/styles/portfolio.css
@@ -17,12 +17,16 @@
     border-radius: 5px;
     font-size: 20px;
     font-weight: bold;
+    cursor: pointer;
 }
 
 /* Main CSS */
 header{
-    background-color: #FFF8E3;
     padding-top: 50px;
+    background: url("../images/developer.png"), url("../images/header_bg.png"), #FFF8E3;
+    background-position: top left, bottom right;
+    background-repeat: no-repeat;
+    
 }
 nav{
     width: 71%;
@@ -49,4 +53,35 @@ nav ul a{
     font-size: 20px;
     color: #474747;
     text-decoration: none;
+}
+header #banner{
+    margin: 47px 38px 0 230px;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+}
+header #banner .banner-content{
+    max-width: 585px;
+}
+header #banner .banner-content h2{
+    font-size: 45px;
+    font-weight: 600;
+    color: #474747;
+    margin-bottom: 5px;
+}
+header #banner .banner-content h1{
+    font-size: 85px;
+    font-weight: bold;
+    color: #181818;
+    margin-bottom: 20px;
+}
+header #banner .banner-content p{
+    font-size: 18px;
+    color: #757575;
+    line-height: 30px;
+    margin-bottom: 30px;
+}
+#banner .banner-image img{
+    max-width: 585px;
+    vertical-align: middle;
 }
