--- a/styles/portfolio.css
+++ b/styles/portfolio.css
@@ -19,7 +19,20 @@
     font-weight: bold;
     cursor: pointer;
 }
-
+.section-heading{
+    max-width: 827px;
+    text-align: center;
+}
+.section-heading h2{
+    font-size: 35px;
+    margin-bottom: 30px;
+}
+.section-heading p{
+    font-size: 18px;
+    margin-bottom: 30px;
+    line-height: 30px;
+    color: #757575;
+}
 /* Main CSS */
 header{
     padding-top: 50px;
@@ -84,4 +97,25 @@ header #banner .banner-content p{
 #banner .banner-image img{
     max-width: 585px;
     vertical-align: middle;
+}
+#about{padding-top: 130px;}
+#about .about-container{
+    width: 71%;
+    max-width: 1140px;
+    margin: 0 auto;
+    text-align: center;
+    background-color: #FFF8F3;
+    padding: 131px 156px;
+}
+#about .about-container .about-info{
+    display: flex;
+    justify-content: space-around;
+}
+.about-info .about-info-card p{
+    font-size: 20px;
+    line-height: 30px;
+    color: #757575;
+}
+.about-info .about-info-card h4{
+    font-size: 20px;
 }
