--- a/styles/portfolio.css
+++ b/styles/portfolio.css
@@ -22,6 +22,7 @@
 .section-heading{
     max-width: 827px;
     text-align: center;
+    margin: 0 auto;
 }
 .section-heading h2{
     font-size: 35px;
@@ -118,4 +119,33 @@ header #banner .banner-content p{
 }
 .about-info .about-info-card h4{
     font-size: 20px;
+}
+#skills{padding-top: 130px;}
+#skills .skills-container{
+    width: 71%;
+    max-width: 1140px;
+    margin: 0 auto;
+}
+#skills .skills-container .skills-box{
+    display: flex;
+    gap: 30px;
+}
+#skills .skills-container .skills-box .skills-card{
+    max-width: 267px;
+    padding: 30px;
+    box-shadow: 0 6px 50px 0 #00000030;
+}
+#skills .skills-container .skills-box .skills-card img{
+    max-width: 44px;
+    margin-bottom: 30px;
+}
+#skills .skills-container .skills-box .skills-card h3{
+    font-size: 20px;
+    margin-bottom: 20px;
+    color: #181818;
+}
+#skills .skills-container .skills-box .skills-card p{
+    font-size: 16px;
+    line-height: 28px;
+    color: #757575;
 }
