--- a/styles/portfolio.css
+++ b/styles/portfolio.css
@@ -38,7 +38,7 @@
 header{
     padding-top: 50px;
     background: url("../images/developer.png"), url("../images/header_bg.png"), #FFF8E3;
-    background-position: top left, bottom right;
+    background-position: 23px 38px, bottom right;
     background-repeat: no-repeat;
     
 }
@@ -147,5 +147,43 @@ header #banner .banner-content p{
 #skills .skills-container .skills-box .skills-card p{
     font-size: 16px;
     line-height: 28px;
+    color: #757575;
+}
+footer{
+    margin-top: 130px;
+    background-color: #FFF8E3;
+    padding: 130px 0;
+}
+footer .footer-container{
+    width: 71%;
+    max-width: 1140px;
+    margin: 0 auto;
+    display: flex;
+    gap: 116px;
+}
+footer .footer-container h2{
+    font-size: 35px;
+    margin-bottom: 20px;
+    color: #181818;
+}
+footer .footer-container .social{
+    max-width: 562px;
+}
+footer .footer-container .social p{
+    font-size: 16px;
+    line-height: 30px;
+    color: #474747;
+    margin-bottom: 30px;
+}
+footer .footer-container .icons a{
+    margin-right: 24px;
+}
+footer .footer-container .form input[type="text"],[type="email"], 
+footer .footer-container .form textarea{
+    width: 661px;
+    padding: 18px 31px;
+    margin-bottom: 24px;
+    border: none;
+    border-radius: 5px;
     color: #757575;
 }
