--- a/styles/portfolio.css
+++ b/styles/portfolio.css
@@ -34,6 +34,10 @@
     line-height: 30px;
     color: #757575;
 }
+.text-center{
+    text-align: center;
+    margin-top: 50px;
+}
 /* Main CSS */
 header{
     padding-top: 50px;
@@ -99,7 +103,7 @@ header #banner .banner-content p{
     max-width: 585px;
     vertical-align: middle;
 }
-#about{padding-top: 130px;}
+#about, #skills, #resume{padding-top: 130px;}
 #about .about-container{
     width: 71%;
     max-width: 1140px;
@@ -120,7 +124,6 @@ header #banner .banner-content p{
 .about-info .about-info-card h4{
     font-size: 20px;
 }
-#skills{padding-top: 130px;}
 #skills .skills-container{
     width: 71%;
     max-width: 1140px;
@@ -149,6 +152,44 @@ header #banner .banner-content p{
     line-height: 28px;
     color: #757575;
 }
+#resume .resume-container{
+    width: 71%;
+    max-width: 1140px;
+    margin: 113px auto 0;
+    display: flex;
+    gap: 24px;
+}
+#resume .resume-container hr{
+    margin: 30px 0;
+}
+#resume .resume-container .section-title{
+    color: #474747;
+    font-size: 30px;
+    margin-bottom: 30px;
+}
+#resume .resume-container .resume-card{
+    max-width: 511px;
+    margin-right: 47px;
+}
+#resume .resume-container .resume-card .card-title{
+    font-size: 25px;
+    font-weight: bold;
+    color: #474747;
+    margin-bottom: 10px;
+}
+#resume .resume-container .resume-card .card-info{
+    font-size: 20px;
+    font-weight: 600;
+    color: #757575;
+    margin-bottom: 20px;
+}
+#resume .resume-container .resume-card .card-text{
+    font-size: 16px;
+    color: #757575;
+    line-height: 28px;
+}
+
+
 footer{
     margin-top: 130px;
     background-color: #FFF8E3;
